--- a/Ex_Files_Nodejs_EssT/Exercise Files/Ch11/11_04/start/public/css/style.css
+++ b/Ex_Files_Nodejs_EssT/Exercise Files/Ch11/11_04/start/public/css/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 h1 {
   margin: 10px 0;
-  color: navy;
+  color: red;
 }
 body {
   display: -webkit-box;
@@ -49,7 +49,7 @@ body dl:empty + p {
 body dl dt {
   font-family: fantasy, sans-serif;
   font-size: 1.5em;
-  color: darkslateblue;
+  color: red;
 }
 body dl dt:hover {
   color: red;
@@ -61,7 +61,7 @@ body dl dd {
   font-size: 1em;
 }
 body form {
-  background-color: darkslateblue;
+  background-color: red;
   color: white;
   padding: 1em;
   width: 80%;
